--- a/package.json
+++ b/package.json
@@ -20,12 +20,17 @@
   "dependencies": {
     "@arco-design/web-vue": "2.52.1",
     "@vueuse/core": "^10.5.0",
+    "fabric": "^5.3.0",
+    "hotkeys-js": "^3.12.0",
+    "nanoid": "^5.0.2",
+    "uuid": "^9.0.1",
     "vue": "^3.3.7",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.0.0-beta.29",
     "@iconify-json/carbon": "^1.1.21",
+    "@types/fabric": "^5.3.5",
     "@types/node": "^20.8.9",
     "@unocss/reset": "^0.57.1",
     "@vitejs/plugin-vue": "^4.4.0",
