--- a/package.json
+++ b/package.json
@@ -19,32 +19,34 @@
   },
   "dependencies": {
     "@arco-design/web-vue": "2.52.1",
-    "@vueuse/core": "^10.5.0",
+    "@vueuse/core": "^10.7.1",
     "fabric": "^5.3.0",
-    "hotkeys-js": "^3.12.0",
-    "nanoid": "^5.0.2",
+    "hotkeys-js": "^3.13.3",
+    "lodash-es": "^4.17.21",
+    "nanoid": "^5.0.4",
     "uuid": "^9.0.1",
-    "vue": "^3.3.7",
+    "vue": "^3.4.3",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^1.0.0-beta.29",
-    "@iconify-json/carbon": "^1.1.21",
-    "@types/fabric": "^5.3.5",
-    "@types/node": "^20.8.9",
-    "@unocss/reset": "^0.57.1",
-    "@vitejs/plugin-vue": "^4.4.0",
-    "@vitejs/plugin-vue-jsx": "^3.0.2",
-    "eslint": "^8.52.0",
-    "pnpm": "^8.10.0",
-    "taze": "^0.12.0",
-    "typescript": "^5.2.2",
-    "unocss": "^0.57.1",
-    "unplugin-auto-import": "^0.16.7",
-    "unplugin-vue-components": "^0.25.2",
+    "@antfu/eslint-config": "^2.6.1",
+    "@iconify-json/carbon": "^1.1.27",
+    "@types/fabric": "^5.3.6",
+    "@types/lodash-es": "^4.17.12",
+    "@types/node": "^20.10.6",
+    "@unocss/reset": "^0.58.3",
+    "@vitejs/plugin-vue": "^5.0.2",
+    "@vitejs/plugin-vue-jsx": "^3.1.0",
+    "eslint": "^8.56.0",
+    "pnpm": "^8.13.1",
+    "taze": "^0.13.1",
+    "typescript": "^5.3.3",
+    "unocss": "^0.58.3",
+    "unplugin-auto-import": "^0.17.3",
+    "unplugin-vue-components": "^0.26.0",
     "unplugin-vue-router": "^0.7.0",
-    "vite": "^4.5.0",
-    "vite-plugin-pages": "^0.31.0",
-    "vue-tsc": "^1.8.22"
+    "vite": "^5.0.10",
+    "vite-plugin-pages": "^0.32.0",
+    "vue-tsc": "^1.8.27"
   }
 }
